PRFL-195 fix friends feed item alignment
git-svn-id: https://source.sakaiproject.org/svn/profile2/trunk@71655 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile2/tool/src/webapp/css/profile2.css
+++ b/profile2/tool/src/webapp/css/profile2.css
@@ -528,6 +528,7 @@ h2 {
 	padding-right: 2px;
 	margin-left: 1px;
 	margin-right: 1px;
+	vertical-align: top;
 }
 	
 .friends-feed-item {
